oreilly/certification-study/questions/1312-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: 1312-pod
spec:
  volumes:
    - name: pv-storage
      persistentVolumeClaim:
        claimName: 1312-pvc
  containers:
    - name: 1312-pod
      image: nginx
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: pv-storage
