oreilly/certification-study/questions/alpine-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: alpine-pod
  name: alpine-pod
  namespace: ckad-ns2
spec:
  containers:
  - image: alpine
    name: alpine-pod
    command: ['sleep', '600']
