oreilly/certification-study/questions/httpd-pod-a.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: pod-a
  name: pod-a
  namespace: ckad-ns1
spec:
  containers:
  - image: httpd
    name: pod-a
  restartPolicy: Always
