oreilly/certification-study/questions/httpd-pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: httpd-pod
  name: httpd-pod
spec:
  containers:
  - image: httpd
    name: httpd-pod
    resources: {}
    readinessProbe:
      exec:
        command:
          - cat
          - /var/www/html/index.html
      initialDelaySeconds: 60
      periodSeconds: 5
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
