oreilly/certification-study/questions/sidecar_pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: sidecari-pod
  name: sidecar-pod
  namespace: ckad-ns3
spec:
  volumes:
  - name: ckad-vm
    hostPath:
      path: '/home/antonio/desenvolvimento/cursos/ckad-certification-study/oreilly/certification-study/questions/ckad-pv'
  containers:
  - image: busybox
    name: busybox
    volumeMounts:
    - mountPath: "/var/log" 
      name: ckad-vm
    command: ['/bin/sh']
    args: ['-c', 'while true; do date >> /var/log/date.log; sleep 5; done']
  - image: alpine
    name: alpine
    volumeMounts:
    - mountPath: "/var/log"
      name: ckad-vm
    command: ['sleep', '600']
    imagePullPolicy: IfNotPresent
  dnsPolicy: ClusterFirst
  restartPolicy: Always
