oreilly/certification-study/questions/my-nw-policy.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: database
  name: database
spec:
  containers:
  - image: alpine
    name: database
    command: ['sleep', '3600']
  dnsPolicy: ClusterFirst
  restartPolicy: Always

---

apiVersion: v1
kind: Pod
metadata:
  labels:
    run: webserver
  name: webserver
spec:
  containers:
  - image: alpine
    name: webserve
    command: ['sleep', '3600']
  dnsPolicy: ClusterFirst
  restartPolicy: Always

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-db
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: "webserver"
